# Qodirbek_Ilxomov_240159

./: CMakeLists.txt  Lab4.cpp  Lab5.cpp  Lab6.cpp  Lab7.cpp  lab 11.cpp  lab10.cpp  lab9.cpp  main.cpp
