cmake_minimum_required(VERSION 3.30)
project(Qodirbek_Ilxomov_240159)

set(CMAKE_CXX_STANDARD 20)

add_executable(Qodirbek_Ilxomov_240159 main.cpp)
add_executable(problem1 Lab4.cpp
        Lab5.cpp
        Lab6.cpp
        Lab7.cpp
        lab9.cpp
        lab10.cpp
        "lab 11.cpp"
        lab14.cpp)



